@@ -1,17 +1,16 @@
-package org.apache.http2.utils;
+package com.k.http.util;
 
 import java.net.HttpURLConnection;
-import java.net.InetSocketAddress;
-import java.net.Proxy;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.util.HashMap;
+import java.util.Map;
 
-import org.apache.http2.HttpClinetEx;
-import org.apache.http2.HttpRequest;
+import com.k.http.HttpClinetEx;
+import com.k.http.HttpRequest;
 
 public class UriUtils {
-
+	private static final String UTF_8 = "UTF-8";
 	public static String getRealUrl(String skipurl) {
 		String newurl = null;
 		String url = skipurl;
@@ -25,7 +24,7 @@ public class UriUtils {
 	}
 
 	public static String getLocationUrl(String httpurl) {
-		HttpRequest request = new HttpRequest(httpurl, 60 * 1000, 60 * 1000);
+		HttpRequest request = new HttpRequest(httpurl, 60 * 1000);
 		request.setMethod(HttpRequest.GET);
 		request.setCanRedirects(false);
 		request.setDefaultAngent();
@@ -43,25 +42,13 @@ public class UriUtils {
 		} catch (Exception e) {
 
 		} finally {
-			HttpClinetEx.close(connection);
+			FileUtil.close(connection);
 		}
 		return newurl;
 	}
 
-	public static String getHostwithProt(String url) {
-		if (url != null) {
-			int i = url.indexOf("://");
-			if (i > 0) {
-				int j = url.indexOf("/", i + 3);
-				String host = (j > 0) ? url.substring(0, j) : url;
-				return host;
-			}
-		}
-		return url;
-	}
-
-	public static HashMap<String, String> getUriData(String uri) {
-		HashMap<String, String> args = new HashMap<String, String>();
+	public static Map<String, String> query(String uri) {
+		Map<String, String> args = new HashMap<String, String>();
 		if (uri != null) {
 			int index = uri.indexOf('?');
 			if (index > 0 && index < uri.length()) {
@@ -70,7 +57,7 @@ public class UriUtils {
 				for (String tmp : tmps) {
 					String[] m = tmp.split("=");
 					if (m.length == 2) {
-						args.put(m[0], m[1]);
+						args.put(m[0], decode(m[1]));
 					}
 				}
 			}
@@ -78,22 +65,10 @@ public class UriUtils {
 		return args;
 	}
 
-	public static String getHost(String url) {
-		if (url != null) {
-			int i = url.indexOf("://");
-			if (i > 0) {
-				int j = url.indexOf(":", i + 3);
-				String host = (j > 0) ? url.substring(0, j) : url;
-				return host;
-			}
-		}
-		return url;
-	}
-
 	public static String decode(String str) {
 		String nstr = "";
 		try {
-			nstr = URLDecoder.decode(str, "UTF-8");
+			nstr = URLDecoder.decode(str, UTF_8);
 		} catch (Exception e) {
 
 		}
@@ -103,20 +78,10 @@ public class UriUtils {
 	public static String encode(String str) {
 		String nstr = "";
 		try {
-			nstr = URLEncoder.encode(str, "UTF-8");
+			nstr = URLEncoder.encode(str, UTF_8);
 		} catch (Exception e) {
 
 		}
 		return nstr;
-	}
-
-	public static Proxy getProxy(String proxyHost, int proxyPort) {
-		Proxy proxy = null;
-		try {
-			proxy = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(proxyHost, proxyPort));
-		} catch (Exception e) {
-
-		}
-		return proxy;
 	}
 }
